--- a/plugins/DevicesDetection/lang/fr.json
+++ b/plugins/DevicesDetection/lang/fr.json
@@ -20,6 +20,8 @@
         "dataTableLabelModels": "Modèle",
         "dataTableLabelSystemVersion": "Version du système d'exploitation",
         "dataTableLabelTypes": "Type",
+        "ClientType": "Type de client",
+        "ClientTypes": "Types de client",
         "Device": "Périphérique",
         "DeviceBrand": "Marque du périphérique",
         "DeviceBrands": "Marques de périphérique",
@@ -47,6 +49,7 @@
         "Phablet": "Phablette",
         "TV": "TV",
         "UserAgent": "Agent Utilisateur (User-Agent)",
+        "FeedReader": "Lecteur de flux",
         "MobileApp": "Application mobile",
         "XVisitsFromDevices": "%1$svisites de %2$spériphériques",
         "WidgetBrowsers": "Navigateurs du visiteur",
