--- a/plugins/Login/lang/fr.json
+++ b/plugins/Login/lang/fr.json
@@ -20,6 +20,9 @@
         "SettingBruteForceMaxFailedLoginsHelp": "Au delà de ce nombre de tentatives échouées de connexion dans l'intervalle de temps configuré ci-dessous, bloquez l'IP.",
         "SettingBruteForceTimeRange": "Compter les tentatives d'ouverture de session dans cette intervalle de temps en minute",
         "SettingBruteForceTimeRangeHelp": "Entrez un chiffre en minutes.",
+        "ConfirmPasswordReset": "Confirmer la réinitialisation du mot de passe",
+        "ConfirmPasswordResetIntro": "Pour confirmer que vous êtes bien à l'origine de cette demande de changement de mot de passe, merci de saisir votre nouveau mot de passe.",
+        "ConfirmPasswordResetWrongPassword": "Le mot de passe saisi ne correspond pas avec votre nouveau mot de passe. Si vous avez oublié le mot de passe choisi récemment, vous pouvez encore le réinitialiser. Si vous n'êtes pas à l'origine de cette demande, vous pouvez simplement l'ignorer et votre mot de passe ne sera pas modifié.",
         "LoginNotAllowedBecauseBlocked": "Vous n'êtes pas autorisé à vous connecter actuellement parce que vous avez trop de connexions échouées, réessayez plus tard.",
         "CurrentlyBlockedIPs": "Addresses IP bloquées",
         "IPsAlwaysBlocked": "Ces adresses IP sont toujours bloquées",
