--- a/plugins/Login/lang/pt.json
+++ b/plugins/Login/lang/pt.json
@@ -20,6 +20,9 @@
         "SettingBruteForceMaxFailedLoginsHelp": "Se for registado um número superior de tentativas de autenticação falhadas dentro do intervalo de tempo configurado abaixo, bloquear o IP.",
         "SettingBruteForceTimeRange": "Contabilizar o número de tentativas de autenticação dentro deste intervalo de tempo, em minutos",
         "SettingBruteForceTimeRangeHelp": "Introduza um número, em minutos.",
+        "ConfirmPasswordReset": "Confirmar reposição de palavra-passe",
+        "ConfirmPasswordResetIntro": "Para confirmar que a a reposição da palavra-passe foi mesmo solicitada por si, por favor introduza a sua nova palavra-passe novamente.",
+        "ConfirmPasswordResetWrongPassword": "A palavra-passe introduzida não coincide com a sua nova palavra-passe. Se não se recorda da nova palavra-passe que escolheu, por repor a sua palavra-passe novamente. Se não solicitou a alteração da palavra-passe, simplesmente não faça nada e a sua palavra-passe não será alterada.",
         "LoginNotAllowedBecauseBlocked": "Neste momento não pode iniciar sessão porque teve demasiadas tentativas de autenticação falhadas; tente novamente mais tarde.",
         "CurrentlyBlockedIPs": "IPs atualmente bloqueados",
         "IPsAlwaysBlocked": "Estes IPs são sempre bloqueados",
