--- a/plugins/Marketplace/lang/fr.json
+++ b/plugins/Marketplace/lang/fr.json
@@ -8,6 +8,7 @@
         "AllowedUploadFormats": "Vous pouvez téléverser un composant additionnel ou un thème au format zip via cette page.",
         "Authors": "Auteurs",
         "Browse": "Parcourir",
+        "SupportMatomoThankYou": "Tout achat aidera à financer l'avenir du projet open-source Matomo. Merci pour votre aide !",
         "LatestMarketplaceUpdates": "Dernières mises à jour du Marketplace.",
         "BackToMarketplace": "Retour au Marché",
         "BrowseMarketplace": "Parcourir le marché",
