--- a/plugins/Marketplace/lang/pt.json
+++ b/plugins/Marketplace/lang/pt.json
@@ -8,6 +8,7 @@
         "AllowedUploadFormats": "Pode enviar uma extensão ou um tema no formato .zip através desta página.",
         "Authors": "Autores",
         "Browse": "Explorar",
+        "SupportMatomoThankYou": "Qualquer compra vai ajudar a financiar o futuro do projeto de código aberto do Matomo. Obrigado pelo seu apoio!",
         "LatestMarketplaceUpdates": "Últimas atualizações na Loja",
         "BackToMarketplace": "Voltar à loja",
         "BrowseMarketplace": "Explorar a loja",
