--- a/plugins/PrivacyManager/lang/fr.json
+++ b/plugins/PrivacyManager/lang/fr.json
@@ -7,7 +7,17 @@
         "AnonymizeIpMaskLengtDescription": "Sélectionnez combien de bytes de l'adresse IP du visiteur doivent être masqués.",
         "AnonymizeIpMaskLength": "%1$s byte(s) - ex %2$s",
         "AskingForConsent": "Demande de permission",
+        "ConsentExplanation": "Le consentement consiste à proposer aux individus le choix et le contrôle au sujet du traitement de leurs données personnelles.",
         "ClickHereSettings": "Cliquez ici pour accéder aux paramètres %s.",
+        "WhenDoINeedConsent": "Quand dois-je demander le consentement de l'utilisateur ?",
+        "WhenConsentIsNeeded1": "Dans le cadre de %1$sla réglementation sur la protection de la vie privée RGPD%2$s, lorsque vous traitez des données personnelles, vous devrez demander dans certain cas le consentement des utilisateurs. Pour savoir si vous avez besoin du consentement, vous devez déterminer si votre base légale pour le traitement des données à caractère personnel est le \"consentement\" ou un \"intérêt légitime\", ou si vous pouvez éviter de collecter des données à caractère personnel. Nous recommandons d'en savoir plus sur %3$sla base légale du RGPD pour Matomo%4$s.",
+        "WhenConsentIsNeeded2": "A noter que si vous avez besoin du consentement des utilisateurs mais que vous ne pouvez pas prouver que vous l'avez eu par le passé, alors nous vous recommandons %1$sd'anonymiser les données brutes de suivi collectées précédemment%2$s.",
+        "HowDoIAskForConsent": "Comment demander le consentement des utilisateurs ?",
+        "HowDoIAskForConsentIntroduction": "Pour tout savoir sur %1$sla demande de cookies ou le suivi du consentement, consultez notre guide d'intégration%2$s.",
+        "AnonymizeSites": "Anonymiser les données de ce site",
+        "AnonymizeRowDataFrom": "Anonymiser les données brutes à partir de :",
+        "AnonymizeRowDataTo": "Anonymiser toutes les données brutes jusqu'à :",
+        "AnonymizeIp": "Anonymiser l'IP",
         "AnonymizeUserId": "Remplacer l'identifiant utilisateur par un pseudonyme",
         "CurrentDBSize": "Taille actuelle de la base de données",
         "DBPurged": "BDD purgée.",
