--- a/plugins/UsersManager/lang/fr.json
+++ b/plugins/UsersManager/lang/fr.json
@@ -12,6 +12,17 @@
         "CreateUser": "Créer l'utilisateur",
         "SaveBasicInfo": "Sauvegarder les informations de base",
         "AllWebsites": "Tous les sites Internet",
+        "LastUsed": "Dernière utilisation",
+        "ExpireDate": "Date d'expiration",
+        "AuthTokens": "Jetons d'authentification",
+        "AuthTokenPurpose": "Comment allez vous utiliser ce jeton ?",
+        "NoTokenCreatedYetCreateNow": "Aucun jeton pour le moment, %1$scréez un nouveau jeton maintenant%2$s.",
+        "TokenSuccessfullyGenerated": "Jeton généré avec succès",
+        "ConfirmTokenCopied": "Je confirme avoir copié le jeton et je comprends que je ne dois partager ce jeton avec personne d'autre.",
+        "GoBackSecurityPage": "Retour à la page de sécurité.",
+        "PleaseStoreToken": "Veuillez conserver votre jeton de manière sécurisé car vous ne pourrez plus y accéder ni le revoir.",
+        "DoNotStoreToken": "Ne partagez ce jeton avec personne d'autre car il est aussi secret que votre login et votre mot de passe.",
+        "CreateNewToken": "Créer un nouveau jeton",
         "AnonymousAccessConfirmation": "Vous êtes sur le point de donner aux usagers anonymes la permission de \"lecture\" sure ce site. Cela signifie que les rapports d'analyse et les informations de vos visiteurs seront visible de manière publique par n'importe qui même sans identifiant. Êtes-vous sûr(e) de vouloir continuer ?",
         "AnonymousUser": "Utilisateur anonyme",
         "AnonymousUserHasViewAccess": "Note : l'utilisateur %1$s a un accès en %2$s à ce site web.",
@@ -89,7 +100,14 @@
         "TokenAuth": "Jeton d'authentification à l'API",
         "TokenRegenerateConfirmSelf": "Modifier le jeton d'authentification à l'API va rendre invalide votre jeton. Si le jeton courant est utilisé, vous devrez mettre à jour tous les clients de l'API qui l'utilisent avec le nouveau jeton généré. Voulez-vous vraiment modifier votre jeton d'authentification ?",
         "TokenRegenerateTitle": "Regénérer",
+        "TokensSuccessfullyDeleted": "Tous les jetons ont été supprimés avec succès",
+        "TokenSuccessfullyDeleted": "Le jeton a été supprimé avec succès",
+        "DeleteAllTokens": "Supprimer tous les jetons",
+        "ExpiredTokensDeleteAutomatically": "Les jetons avec une date d'expiration seront automatiquement supprimés.",
+        "TokensWithExpireDateCreationBySystem": "Actuellement, les jetons avec une date d'expiration peuvent être créés seulement par le système.",
+        "TokenAuthIntro": "Les jetons que vous avez générés peuvent être utilisés pour accéder à l'API de reporting Matomo, à l'API de suivi Matomo et aux widgets Matomo exportés et ils possèdent les mêmes autorisations que votre connexion d'utilisateur habituelle. Vous pouvez également utiliser ces jetons pour l'application Matomo Mobile.",
         "TypeYourPasswordAgain": "Tapez à nouveau votre nouveau mot de passe.",
+        "TypeYourCurrentPassword": "Veuillez saisir votre mot de passe actuel pour confirmer le changement de mot de passe.",
         "User": "Utilisateur",
         "UserHasPermission": "%1$s possède un accès %2$s à %3$s.",
         "UserHasNoPermission": "%1$s possède %2$s à %3$s",
@@ -159,6 +177,7 @@
         "EmailChangedEmail1": "L'adresse courriel associée à votre compte a été changée par %1$s",
         "EmailChangedEmail2": "Ce changement a été initié depuis le périphérique suivant : %1$s (Adresse IP = %2$s).",
         "IfThisWasYouIgnoreIfNot": "Si c'était vous, vous pouvez ignorer ce courriel. Si ce n'était pas vous, veuillez vous identifier, corrigez votre adresse de courriel, modifiez votre mot de passe et contactez votre administrateur Matomo.",
+        "IfThisWasYouPasswordChange": "Si c'était vous, vous pouvez ignorer ce courriel. Si ce n'était pas vous, veuillez contacter votre administrateur Matomo immédiatement, car votre compte pourrait avoir été compromis !",
         "PasswordChangeNotificationSubject": "Le mot de passe de votre compte Matomo vient d'être modifié",
         "PasswordChangedEmail": "Votre mot de passe vient d'être modifié. Le changement a été initié depuis le périphérique suivant : %1$s (Adresse IP = %2$s).",
         "NewsletterSignupTitle": "Enregistrement à l'infolettre",
