--- a/plugins/VisitTime/lang/fr.json
+++ b/plugins/VisitTime/lang/fr.json
@@ -5,8 +5,11 @@
         "ColumnLocalMinute": "Heure locale - minute (début de la visite)",
         "ColumnServerTime": "Heure serveur",
         "ColumnServerHour": "Heure du serveur - heure",
+        "ColumnVisitEndServerHour": "Heure du serveur - heure (moment de la dernière action)",
+        "ColumnVisitEndServerMinute": "Heure du serveur - minute (moment de la dernière action)",
         "ColumnVisitStartServerHour": "Heure du serveur - heure (début de la visite)",
         "ColumnVisitStartServerMinute": "Heure du serveur - minute (début de la visite)",
+        "ColumnVisitEndServerDate": "Heure serveur - date (moment de la dernière action)",
         "ColumnServerMinute": "Heure du serveur - minute",
         "DayOfWeek": "Jour de la semaine",
         "LocalTime": "Visites par heure locale",
