--- a/plugins/CoreAdminHome/lang/tr.json
+++ b/plugins/CoreAdminHome/lang/tr.json
@@ -132,7 +132,7 @@
         "TrackingFailureInvalidSiteProblem": "Site bulunamadı.",
         "TrackingFailureInvalidSiteSolution": "İzleyicide yapılandırılmış idSite değerini güncelle.",
         "TrackingFailureAuthenticationProblem": "İstekte kimlik doğrulaması yapılmamış ancak kimlik doğrulaması isteniyor.",
-        "TrackingFailureAuthenticationSolution": "İzleme isteği için \"token_auth\" değerini ayarlayın ya da düzeltin.",
+        "TrackingFailureAuthenticationSolution": "İzleme isteği için \"Kimlik Doğrulama Kodu (token_auth)\" değerini ayarlayın ya da düzeltin.",
         "ConfirmDeleteAllTrackingFailures": "Tüm izleme sorunlarını silmek istediğinize emin misiniz?",
         "ConfirmDeleteThisTrackingFailure": "Bu izleme sorununu silmek istediğinize emin misiniz?",
         "TrackingFailuresEmailSubject": "Matomo İstatistiklerindeki izleme sorunları",
