--- a/plugins/UserCountry/lang/fr.json
+++ b/plugins/UserCountry/lang/fr.json
@@ -14,6 +14,7 @@
         "VisitLocation": "Emplacement de la visite",
         "CurrentLocationIntro": "D'après ce fournisseur, votre emplacement actuel est",
         "DefaultLocationProviderDesc1": "Le fournisseur de localisation par défaut devine le pays d'un visiteur en se basant sur le langage de son navigateur.",
+        "DefaultLocationProviderDesc2": "Ceci n'est pas très précis, %1$snous recommandons donc l'installation et l'utilisation d'une %2$sbase de données de géolocalisation%3$s.%4$s",
         "DefaultLocationProviderExplanation": "Vous utilisez le fournisseur de localisation par défaut, ce qui signifie que Matomo va tenter de déterminer la localisation du visiteur en se basant sur la langue qu'ils utilisent. %1$sConsultez ceci%2$s pour apprendre comment configurer une localisation plus précise.",
         "DistinctCountries": "%s pays différents",
         "FromDifferentCities": "villes différentes",
@@ -24,6 +25,7 @@
         "getContinentDocumentation": "Ce rapport montre dans quel continent vos visiteurs étaient quand ils ont accédé à votre site web.",
         "getCountryDocumentation": "Ce rapport montre dans quel pays vos visiteurs étaient quand ils ont accédé à votre site web.",
         "getRegionDocumentation": "Ce rapport montre dans quelle région vos visiteurs étaient quand ils ont accédé à votre site web.",
+        "HowToInstallGeoIPDatabases": "Comment puis-je récupérer des bases de données de géolocalisation ?",
         "Latitude": "Latitude",
         "Latitudes": "Lattitudes",
         "Location": "Localisation",
@@ -32,10 +34,14 @@
         "Longitudes": "Longitudes",
         "NoDataForGeoIPReport1": "Il n'y a aucune données pour ce rapport parce qu'il n'y a pas de base de données de localisation de disponible ou bien l'adresse IP du visiteur ne peut être géolocalisée.",
         "NoDataForGeoIPReport2": "Pour activer une géolocalisation précise, modifiez les paramètres %1$sici%2$s et utilisez une %3$sbase de données de niveau ville%4$s.",
+        "NoProviders": "Il n'y a pour le moment aucun autre fournisseur de services de géolocalisation. Matomo recommande l'utilisation de bases %1$sdbip%2$s, mais cela nécessite l'activation du composant Geoip2 (vous pouvez également installer un composant tiers qui fournit sa propre fonctionnalité de géolocalisation à partir du marché).",
         "PluginDescription": "Rapports sur l'emplacement de vos visiteurs: pays, région, ville et coordonnées géographiques (latitude\/longitude).",
         "Region": "Région",
         "SubmenuLocations": "Provenances géographiques",
+        "TestIPLocatorFailed": "Matomo a essayé de vérifier la localisation d'une adresse IP connue (%1$s) mais le serveur n'a retourné aucune information. Ce fournisseur n'est peut-être pas configuré correctement (la base de données de géolocalisation est peut-être mal nommée ou située dans un mauvais répertoire).",
         "ToGeolocateOldVisits": "Pour obtenir les données de localisation de vos anciennes visites, utilisez le script décrit %1$sici%2$s.",
-        "WidgetLocation": "Emplacement du visiteur"
+        "WidgetLocation": "Emplacement du visiteur",
+        "GeoIpDbIpAccuracyNote": "Remarque : les bases de données DBIP sont gratuites et peuvent être téléchargées automatiquement, mais les résultats de géolocalisation (surtout les villes) ne sont pas aussi précis que ceux de MaxMind. MaxMind nécessite cependant de créer un compte même pour la version gratuite de la base. Si vous souhaitez utiliser la base de géolocalisation MaxMind, vous pouvez %1$sdémarrer la procédure ici%2$s.",
+        "MaxMindLinkExplanation": "Si vous utilisez les bases de géolocalisation MaxMind mais vous ne savez pas encore comment générer l'URL de téléchargement, %1$scliquez ici pour apprendre%2$s."
     }
 }
