--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1,7 +1,7 @@
 {
     "General": {
-        "12HourClock": "توقيت١٢ ساعة",
-        "24HourClock": "توقيت ٢٤ ساعة",
+        "12HourClock": "توقيت12 ساعة",
+        "24HourClock": "توقيت 24 ساعة",
         "AbandonedCarts": "عربات متروكة",
         "AboutPiwikX": "حول Matomo %s",
         "Action": "أمر",
@@ -20,6 +20,7 @@
         "AverageOrderValue": "متوسط ​​قيمة الطلب",
         "AveragePrice": "متوسط السعر",
         "AverageQuantity": "الکمیة المتوسطہ",
+        "AverageX": "معدل %s",
         "BackToPiwik": "العودة إلى Matomo",
         "Broken": "تالِف",
         "Cancel": "إلغاء",
@@ -31,15 +32,19 @@
         "ClickHere": "إضغط هنا لمزيد من المعلومات.",
         "Close": "إغلاق",
         "ClickToSearch": "إضغط للبحث",
+        "Copy": "نسخ",
+        "Confirm": "تأكيد",
         "ColumnActionsPerVisit": "السلوكيات لكل زيارة",
         "ColumnActionsPerVisitDocumentation": "عدد متوسط للإجراءات (عرض الصفحات،عمليات بحث في الموقع،تنزيلات من الموقع أو روابط خارجية) التي أُنجِزت أثناء الزيارات.",
         "ColumnAverageGenerationTime": "متوسط مدة الإنشاء",
         "ColumnAverageGenerationTimeDocumentation": "متوسط الوقت المستغرق لإنشاء الصفحة. يشمل هذا المقياس الوقت الذي أخذه الخادم لإنشاط صفحة الوب ، مضافاً إليه الوقت الذي استغرق عند الزائر في تنزيل استجابة الخادم. 'متوسط وقت إنشاء' قليل يعني موقعاً أسرع لزوارك!",
         "ColumnAverageTimeOnPage": "متوسط الزمن على الصفحة",
         "ColumnAvgTimeOnSite": "متوسط الزمن على الموقع",
+        "ColumnSumTimeOnSite": "مجمل الوقت في الموقع",
         "ColumnAvgTimeOnSiteDocumentation": "متوسط مدة زيارة.",
         "ColumnBounceRate": "معدل الارتداد",
         "ColumnBounces": "الارتدادات",
+        "RealTime": "الوقت الحقيقي",
         "ColumnConversionRate": "معدل الفاعلية",
         "ColumnDestinationPage": "الصفحة الوِجهَة",
         "ColumnEntrances": "الدخول",
@@ -52,6 +57,7 @@
         "ColumnPageGenerationTime": "مدة إنشاء الصفحة",
         "ColumnKeyword": "كلمة دلالية",
         "ColumnLabel": "عنوان",
+        "ColumnHits": "الزيارات",
         "ColumnMaxActions": "أقصى عدد من السلوكيات في زيارة واحدة",
         "ColumnNbActions": "السلوكيات",
         "ColumnNbUniqVisitors": "زوار فريدين",
@@ -70,6 +76,7 @@
         "ColumnViewedAfterSearch": "الضغطات في نتائج البحث",
         "ColumnVisitDuration": "مدة الزيارة (بالثواني)",
         "ColumnVisitsWithConversions": "زيارات بفائدة",
+        "ComputedMetricAverage": "معدل %1$s لكل %2$s",
         "ComputedMetricMaxDocumentation": "القيمة القصوى لـ %s",
         "ComputedMetricMinDocumentation": "القيمة الدنيا لـ %s",
         "ComputedMetricUniqueCount": "فريدة %s",
@@ -415,6 +422,7 @@
         "Advanced": "متقدم",
         "AnonymousAccess": "وصول الزائر المجهول",
         "AnonymousTracking": "تتبع وصول الزوار المجهولين",
+        "AskForAnonymousTrackingPermission": "عند التفعيل، سيقوم Matomo Mobile بإرسال بيانات إحصائية مجهولة عن الاستخدام لشركة Matomo. المقصود من هذه الإحصائيات هو استخدامها من قبل مطورو Matomo Mobile لزيادة فهمهم عن طريقة استخدام التطبيق. البيانات المرسلة هي: القوائم والإعدادات التي يتم الضغط عليها، اسم ونسخة نظام التشغيل، وأي خطأ قد يظهر في التطبيق. لن نتتبع أي إحصائيات خاصة بمواقعك. هذه البيانات مجهولة وسرية ولن يتم الإفصاح عنها. يمكنك تعطيل\\تفعيل هذه الخاصية من الإعدادات في أي وقت.",
         "ChooseHttpTimeout": "إختر قيمة مهلة HTTP",
         "ChooseMetric": "اختر المقياس",
         "ChooseReport": "إختر التقرير",
@@ -433,6 +441,7 @@
         "LoadingReport": "تحميل %s",
         "LoginCredentials": "بيانات الاعتماد",
         "LoginUseHttps": "استخدم https",
+        "MatomoMobile": "تطيبق Matomo Mobile",
         "MultiChartLabel": "إعرض الرسوم الصغيرة",
         "NavigationBack": "العودة",
         "NetworkError": "خطأ شبكة",
@@ -463,14 +472,20 @@
         "TopVisitedWebsites": "أكثر مواقع الويب تصفحاً",
         "TryIt": "جربه !",
         "VerifyAccount": "التحقق من الحساب",
+        "ValidateSslCertificate": "تاكيد شهادة SSL",
         "VerifyLoginData": "تأكد من أن اسم المستخدم وكلمة المرور صحيحين.",
-        "YouAreOffline": "نعتذر، لست مشتركاً حالياً"
+        "YouAreOffline": "نعتذر، لست مشتركاً حالياً",
+        "Mobile_HowtoExitAndroid": "اضغط الخلف مجدداً للخروج",
+        "MatomoMarketplace": "متجر Matomo",
+        "EnterAuthCode": "أدخل رمز المصادقة",
+        "EnterCorrectAuthCode": "أدخل رمز المصادقة الصحيح"
     },
     "RowEvolution": {
         "AvailableMetrics": "المقاييس المتوفرة",
         "CompareDocumentation": "إضغط على الرابط أسفله و افتح هذه المنبثقة لسطر آخر من نفس الجدول لكي تقارن عدة تسجيلات.<br \/> إستعمل shift-click لتسجل السطر للمقارنة بدون فتح هذه المنبثقة.",
         "CompareRows": "قارن السجلات",
         "ComparingRecords": "مقارنة %s صفوف",
+        "Documentation": "اضغط على المقاييس للعرض برسم بياني كبير. يمكنك استخدام المفتاح shift مع الضغط بالفأرة لعرض أكثر من مقياس مرة واحدة.",
         "MetricBetweenText": "من %1$s إلى %2$s",
         "MetricChangeText": "%s التغير خلال المدة",
         "MetricMinMax": "%1$s تراوحت بين %2$s و %3$s ضمن المدة",
