--- a/plugins/Dashboard/lang/ro.json
+++ b/plugins/Dashboard/lang/ro.json
@@ -18,8 +18,10 @@
         "Maximise": "Maximizează",
         "Minimise": "Minimizează",
         "NotUndo": "Nu o să poţi revoca acestă operaţie.",
+        "PluginDescription": "Tabloul de bord Web Analytics. Personalizați tabloul de bord adăugând widget-uri noi, trageți-le și aruncați-le aici și modificați aspectul coloanei de bord. Fiecare utilizator își poate gestiona propriul tablou de bord personalizat.",
         "RemoveDashboard": "Şterge panoul de control",
         "RemoveDashboardConfirm": "Eşti sigur(ă) că vrei să ştergi panoul de control \"%s\"?",
+        "RemoveDefaultDashboardNotPossible": "Tabloul de bord implicit nu poate fi şters",
         "RenameDashboard": "Redenumeşte panoul de control",
         "ResetDashboard": "Resetează panoul de control",
         "ResetDashboardConfirm": "Eşti sigur(ă) că vrei să resetezi aspectul panoului de control la selecţia implicită de Widget-uri?",
