--- a/plugins/Installation/lang/en.json
+++ b/plugins/Installation/lang/en.json
@@ -23,7 +23,7 @@
         "HappyAnalysing": "Happy analysing!",
         "Installation": "Installation",
         "InformationalResults": "Informational results",
-        "CopyBelowInfoForSupport": "Copy or download the below info in case our support team asks you for this information",
+        "CopyBelowInfoForSupport": "Copy or download the below info in case our support team asks you for this information.",
         "CopySystemCheck": "Copy system check",
         "DownloadSystemCheck": "Download system check",
         "InstallationStatus": "Installation status",
