System check: Add Matomo Version History and download feature (#16386)
* System check: Add Matomo Version History and download feature

* minor tweak

* update screenshots

* update screenshot

Co-authored-by: diosmosis <diosmosis@users.noreply.github.com>

--- a/plugins/Installation/lang/en.json
+++ b/plugins/Installation/lang/en.json
@@ -23,8 +23,9 @@
         "HappyAnalysing": "Happy analysing!",
         "Installation": "Installation",
         "InformationalResults": "Informational results",
-        "CopyBelowInfoForSupport": "Copy the below info in case our support team asks you for this information",
+        "CopyBelowInfoForSupport": "Copy or download the below info in case our support team asks you for this information.",
         "CopySystemCheck": "Copy system check",
+        "DownloadSystemCheck": "Download system check",
         "InstallationStatus": "Installation status",
         "InsufficientPrivilegesHelp": "You can add these privileges by using a tool such as phpMyAdmin or by executing the right SQL queries. If you don't know how to do these things, please ask your sysadmin to grant these privileges for you.",
         "InsufficientPrivilegesMain": "Either the Database does not exist (and could not be created), or the specified User has insufficient privileges. Database user must have the following privileges: %s",
